less buggy radio unselect (for testing on mobile), #351

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -188,6 +188,12 @@ html.touch{
       margin-right: 0; } }
   .itemset-template, .itemset-labels{
     display: none;}
+  .reset-radio{
+  	visibility: hidden;
+  	display: block;
+  	margin-bottom: -14px;
+  	margin-left: 9px;
+  	opacity: 0.6; }
   .add-on{
     padding: 9px 5px;
     margin-top: 8px;
